# reachy_controllers

./: README.md  package.xml  setup.cfg  setup.py
.github/workflows/: lint.yml
examples/: arm_copy.py  fans.py  get_all_joints_state.py  orbita_zero.py  set_all_motors_compliant.py  setup_pid.py  view_cam.py
launch/: camera_controller.launch.py  camera_publisher.launch.py  camera_zoom_service.launch.py  gripperMX28_controller.launch.py  gripper_controller.launch.py  joint_state_controller.launch.py  mockup_controller.launch.py  reachy_controllers.launch.py
reachy_controllers/: __init__.py  camera_publisher.py  camera_zoom_service.py  fan_state_controller.py  gripperMX28_controller.py  gripperMX28_controller_check.py  gripperMX28_controller_dumb.py  gripperMX28_test.py  gripper_controller.py  grippers_controller.py  joint_controller.py  joint_state_controller.py  mockup_controller.py  utils.py  zoom_service.py
reachy_controllers/robot_hardware_interface/: __init__.py  robot_hardware_interface.py  usb2ax_controller.py
setup/: orbita_zero.py  orbita_zero_painter.py  setup_pid.py  test_orbita_fan.py
